UtahLiveDataTest/src/objects/ReviewStep__c.object
<CustomObject>
    <description>[Business] Defines all the details of Review Step defined in the Review of Application/Pre-Application</description>
    <fields>
        <fullName>AnnouncementId__c</fullName>
        <formula>ReviewGroup__r.Announcement__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementName__c</fullName>
        <formula>ReviewGroup__r.Announcement__r.AnnouncementName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementNumber__c</fullName>
        <formula>ReviewGroup__r.Announcement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementType__c</fullName>
        <formula>TEXT(ReviewGroup__r.Announcement__r.AnnouncementType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AnnouncementType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationAssignment__c</fullName>
        <label>Application Assignment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalConfirmationFlexTableName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This table is used to render a table on the confirmation page for promote button from decisions tab</inlineHelpText>
        <label>Approval Confirmation Flex Table Name</label>
        <referenceTo>GNT__DataTableConfig__c</referenceTo>
        <relationshipLabel>Approval Confirmation Flex Table</relationshipLabel>
        <relationshipName>ApprovalConfirmationFlexTable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovalConfirmationLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This layout is used to render the confirmation page for promote button from decisions tab</inlineHelpText>
        <label>Approval Confirmation Layout (Obsolete)</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipLabel>Approval Confirmation Layout</relationshipLabel>
        <relationshipName>ApprovalConfirmationLayout</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovalEmailTemplate__c</fullName>
        <inlineHelpText>This field is used to store the developer name of the email template to notify the Applicant upon Approval/Promotion</inlineHelpText>
        <label>Approval Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletedReviews__c</fullName>
        <formula>( NoOfCompletedReviews__c / NoOfReviews__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CountReviewPanels__c</fullName>
        <label>Review Panel Count</label>
        <summaryForeignKey>ReviewPanel__c.ReviewStep__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DepartmentName__c</fullName>
        <formula>ReviewGroup__r.Announcement__r.AdministrationBureauUnit__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExecApproverName__c</fullName>
        <formula>ExecutiveApprover__r.FirstName&amp;&quot; &quot;&amp;ExecutiveApprover__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExecApproverName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecutiveApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Review_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FDMCreated__c</fullName>
        <label>FDM Created</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantCode__c</fullName>
        <description>Grant Code</description>
        <label>Grant Abbreviation</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideAddPanel__c</fullName>
        <formula>IF(ReviewGroup__r.Announcement__r.OrganizationName__c == &apos;USBE&apos;, OR($User.Id != ReviewGroup__r.OwnerId, TEXT(Status__c) != &apos;Not Started&apos;), IF(AND(ReviewGroup__r.Announcement__r.OrganizationName__c == &apos;UOVC&apos;,StepNumber__c==1.0),true,false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAddPanel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideApproveBtn__c</fullName>
        <formula>ISPICKVAL(Status__c,&apos;Completed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideApproveBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <formula>OR(CreatedById  &lt;&gt;  $User.Id ,
  ISPICKVAL(ReviewApprovalStatus__c ,&apos;Submitted for Approval&apos;),
  ISPICKVAL(ReviewApprovalStatus__c ,&apos;Approved&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditFDM__c</fullName>
        <formula>IF($User.Id == ReviewGroup__r.OwnerId, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditFDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideForStep2_3__c</fullName>
        <formula>IF( OR ( StepNumber__c == 2, StepNumber__c == 3), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide for Step 2&amp;3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideInitiateBtn__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c,&apos;Not Started&apos;) &amp;&amp; NumberOfApplications__c != 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Initiate Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePromoteNextStep__c</fullName>
        <formula>IF(StepNumber__c==3,TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HidePromoteNextStep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSendReject__c</fullName>
        <formula>ISPICKVAL(ReviewApprovalStatus__c, &apos;Created&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideSendReject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSubmitforApproval__c</fullName>
        <formula>NOT(ISPICKVAL(ReviewApprovalStatus__c ,&apos;Created&apos;) || ISPICKVAL(ReviewApprovalStatus__c ,&apos;Rejected&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideforStep1__c</fullName>
        <formula>IF( StepNumber__c == 1, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide for Step 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstructionsToReviewers__c</fullName>
        <label>Instructions to Reviewers (Obsolete)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsRecordRecalled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag will will true if record is sent to owner</description>
        <label>IsRecordRecalled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastStep__c</fullName>
        <formula>If( ReviewGroup__r.NumberOfReviewSteps__c == StepNumber__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaximumReviewers__c</fullName>
        <label>Maximum Reviewers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinimumReviewers__c</fullName>
        <label>Minimum Reviewers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoOfCompletedReviews__c</fullName>
        <label>NoOfCompletedReviews</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoOfReviews__c</fullName>
        <description>Number of Reviews for the Review Step</description>
        <label>NoOfReviews</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoRemainingApps__c</fullName>
        <description>No of applications in the review step that are not promoted.</description>
        <label>NoRemainingApps</label>
        <summaryFilterItems>
            <field>ReviewStepApplication__c.ReviewStepAppFinalDecision__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>ReviewStepApplication__c.ReviewStep__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NoofApplicationsPending__c</fullName>
        <label>No.of Applications Pending</label>
        <summaryFilterItems>
            <field>ReviewStepApplication__c.Decision__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>ReviewStepApplication__c.ReviewStep__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NoofPromotedApplications__c</fullName>
        <label>No.of Promoted Applications</label>
        <summaryFilterItems>
            <field>ReviewStepApplication__c.Decision__c</field>
            <operation>equals</operation>
            <value>Approved, Recommended for Award</value>
        </summaryFilterItems>
        <summaryForeignKey>ReviewStepApplication__c.ReviewStep__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NoofRejectedApplications__c</fullName>
        <label>No.of Rejected Applications</label>
        <summaryFilterItems>
            <field>ReviewStepApplication__c.Decision__c</field>
            <operation>equals</operation>
            <value>Rejected, Recommended for Award with Reservation</value>
        </summaryFilterItems>
        <summaryForeignKey>ReviewStepApplication__c.ReviewStep__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfApplicationsFormula__c</fullName>
        <formula>IF((ReviewGroup__r.Announcement__r.OrganizationName__c == &apos;USBE&apos;), ReviewGroup__r.Announcement__r.NumberOfApplicationsInReview__c, NumberOfApplications__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applications Available Per Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfApplications__c</fullName>
        <inlineHelpText>Number of Applications in a step</inlineHelpText>
        <label>Applications Available Per Review</label>
        <summaryFilterItems>
            <field>ReviewStepApplication__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Application</value>
        </summaryFilterItems>
        <summaryForeignKey>ReviewStepApplication__c.ReviewStep__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfApprovedApplications__c</fullName>
        <label>Number of Approved Applications</label>
        <summaryFilterItems>
            <field>ReviewStepApplication__c.Decision__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>ReviewStepApplication__c.ReviewStep__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfAssignedApplications__c</fullName>
        <inlineHelpText>Calculated field. Used to calculate the number of unassigned applications</inlineHelpText>
        <label>Number of Assigned Applications</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfAssignedPreApplications__c</fullName>
        <label>Number of Assigned PreApplications</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfAssignedReviewers__c</fullName>
        <inlineHelpText>Calculated field. Used to calculate the number of unassigned reviewers</inlineHelpText>
        <label>Number of Assigned Reviewers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfPreApplications__c</fullName>
        <label>Number of Pre-Applications</label>
        <summaryFilterItems>
            <field>ReviewStepApplication__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pre-Application</value>
        </summaryFilterItems>
        <summaryForeignKey>ReviewStepApplication__c.ReviewStep__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfReviewers__c</fullName>
        <label>No.of Assigned Reviewers</label>
        <summaryForeignKey>ReviewStepUser__c.ReviewStep__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfUnassignedApplications__c</fullName>
        <formula>NumberOfApplications__c -  NumberOfAssignedApplications__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Of Unassigned Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfUnassignedPreApplications__c</fullName>
        <formula>NumberOfPreApplications__c - NumberOfAssignedPreApplications__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Unassigned Pre-Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfUnassignedReviewers__c</fullName>
        <formula>NumberOfReviewers__c -  NumberOfAssignedReviewers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Unassigned Reviewers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofAutoAssignPanels__c</fullName>
        <label>Number of Auto Assign Panels</label>
        <summaryFilterItems>
            <field>ReviewPanel__c.AutoAssignSubmittedApplication__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ReviewPanel__c.ReviewStep__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofNonWinners__c</fullName>
        <label>Number of Non-Winners</label>
        <summaryFilterItems>
            <field>ReviewStepApplication__c.Decision__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryForeignKey>ReviewStepApplication__c.ReviewStep__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofWinners__c</fullName>
        <label>Number of Winners</label>
        <summaryFilterItems>
            <field>ReviewStepApplication__c.ReviewStepNumber__c</field>
            <operation>equals</operation>
            <value>3</value>
        </summaryFilterItems>
        <summaryForeignKey>ReviewStepApplication__c.ReviewStep__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ODApproved__c</fullName>
        <formula>IF(ISPICKVAL( ReviewApprovalStatus__c ,&apos;OD Approved&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OD Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OGMApproved__c</fullName>
        <formula>IF(ISPICKVAL(ReviewApprovalStatus__c,&apos;OD Approval Requested&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OGM Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OGMNotifiedOfRejections__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OGM Notified of Rejections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <formula>ReviewGroup__r.Announcement__r.OrganizationName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrganizationName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Since OwnerId is controlled by Master-Detail, we need a separate Step Owner field.</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Review_Rounds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PanelHeadAssignNotificationTemplate__c</fullName>
        <label>Panel Head Assign Notification Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingApplications__c</fullName>
        <formula>If(NoofApplicationsPending__c&gt;0, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Applications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreventDuplicateReviewers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevent Duplicate Reviewers Across Panels</description>
        <label>Prevent Duplicate Reviewers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <formula>ReviewGroup__r.Announcement__r.ProgramName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <formula>ReviewGroup__r.Announcement__r.ProgramName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProgramName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramPathway__c</fullName>
        <formula>TEXT(ReviewGroup__r.Announcement__r.Program__r.ProgramPathway__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Pathway</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecallComment__c</fullName>
        <description>RecallComment</description>
        <label>Recall Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RejectionConfirmationFlexTableName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This flex table is used to render the table on confirmation page for reject button from decisions tab</inlineHelpText>
        <label>Rejection Confirmation Flex Table Name</label>
        <referenceTo>GNT__DataTableConfig__c</referenceTo>
        <relationshipLabel>Rejection Confirmation Flex Table</relationshipLabel>
        <relationshipName>Review_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RejectionConfirmationLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This layout is used to render the confirmation page for reject button from decisions tab</inlineHelpText>
        <label>Rejection Confirmation Layout (Obsolete)</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipLabel>Rejection Confirmation Layout</relationshipLabel>
        <relationshipName>RejectionConfirmationLayout</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RejectionEmailTemplate__c</fullName>
        <inlineHelpText>This field is used to store the developer name of the email template to notify the Applicant upon Rejection</inlineHelpText>
        <label>Rejection Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewApprovalStatus__c</fullName>
        <label>Review Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>OD Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReviewDueDate__c</fullName>
        <label>Review Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReviewFormConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review Form Config</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipLabel>Review Steps (Review Form Config)</relationshipLabel>
        <relationshipName>Review_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewGroup__c</fullName>
        <label>Review Group</label>
        <referenceTo>ReviewGroup__c</referenceTo>
        <relationshipLabel>Review Steps</relationshipLabel>
        <relationshipName>Review_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReviewLevelAcceptance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Level Acceptance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewPackage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review Package</label>
        <referenceTo>GNT__Package__c</referenceTo>
        <relationshipLabel>Review Steps</relationshipLabel>
        <relationshipName>Review_Rounds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewScoreReportHeaderField__c</fullName>
        <inlineHelpText>What is the field API name from application or pre-application object that holds the text to display on the review scoring report page?</inlineHelpText>
        <label>Review Score Report Header Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewStepExpired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the Today Date Exceeds End Date of the Review Step, A workflow rule triggers an update on this field to Checked</description>
        <inlineHelpText>When the Today Date Exceeds End Date of the Review Step, A workflow rule triggers an update on this field to Checked</inlineHelpText>
        <label>Review Step Expired ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewStepLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This layout is used to render the Review step view page</inlineHelpText>
        <label>Review Step Layout</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipLabel>Review Step Layout</relationshipLabel>
        <relationshipName>Review_Steps_Layout</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewStepTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review Step Template</label>
        <referenceTo>ReviewStepTemplate__c</referenceTo>
        <relationshipLabel>Review Steps</relationshipLabel>
        <relationshipName>Review_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewTypeName__c</fullName>
        <formula>IF(ReviewStepTemplate__r.ReviewTypeName__c != null, ReviewStepTemplate__r.ReviewTypeName__c, ReviewStepTemplate__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReviewTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewersCount__c</fullName>
        <label>No. Of Reviewers</label>
        <summarizedField>ReviewPanel__c.ReviewersCount__c</summarizedField>
        <summaryForeignKey>ReviewPanel__c.ReviewStep__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDDApproved__c</fullName>
        <formula>IF(ISPICKVAL(ReviewApprovalStatus__c ,&apos;OGM Approval Requested&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDD Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDDNotified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SDD Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScoringScale__c</fullName>
        <inlineHelpText>What text to show on the review scoring report page footer to indicate the scoring scale?
Example:

Scoring Scale	
0	Not Applicable
1	Very Weak
2	Weak
3	Fair
4	Strong
5	Very Strong</inlineHelpText>
        <label>Scoring Scale</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ScoringThreshold__c</fullName>
        <label>Scoring Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StepNumber__c</fullName>
        <label>Step Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>announcementOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Announcement Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Review_Steps2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Review Step</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Steps</pluralLabel>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Preapplication</fullName>
        <active>true</active>
        <label>Pre-Application</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>